--- a/portfolio.html
+++ b/portfolio.html
@@ -202,7 +202,7 @@ body {
     .plus {    
     height: 500px!important;
     flex:100%;
-    padding: 0;
+    padding: 0 !important;
   }
 }
 
@@ -986,9 +986,9 @@ h2 {
    style="text-decoration: none; color: inherit;">
 
   <div class="plus"
-       style="min-width: 85vw;
+       style="min-width: 90vw;
               border-radius: 1em;
-              padding: 1.5em;
+              padding: 1.6em;
               width: 320px;
               display: flex;
               align-items: center;
