--- a/portfolio.html
+++ b/portfolio.html
@@ -813,6 +813,116 @@ h2 {
 .current {
     color: #8d8d8d;
 }
+      .back-to-top {
+            position: fixed;
+            bottom: 40px;
+            right: 40px;
+            width: 50px;
+            height: 80px;
+            background: #000;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+            z-index: 1000;
+            border: none;
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
+            overflow: hidden;
+        }
+
+        .back-to-top::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(45deg, 
+                rgba(255, 255, 255, 0.1) 0%, 
+                rgba(255, 255, 255, 0.3) 50%, 
+                rgba(255, 255, 255, 0.1) 100%);
+            top: -100%;
+            left: -100%;
+            animation: glow 3s infinite;
+        }
+
+        @keyframes glow {
+            0% {
+                transform: translate(-100%, -100%) rotate(0deg);
+            }
+            100% {
+                transform: translate(100%, 100%) rotate(360deg);
+            }
+        }
+
+        .back-to-top.visible {
+            opacity: 1;
+            visibility: visible;
+            transform: scale(1);
+        }
+
+        .back-to-top:hover {
+            transform: scale(1.1) translateY(-5px);
+            box-shadow: 0 12px 35px rgba(0, 0, 0, 0.4);
+        }
+
+        .back-to-top:active {
+            transform: scale(0.95);
+        }
+
+        .arrow {
+            width: 0;
+            height: 0;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            border-bottom: 16px solid #fff;
+            position: relative;
+            z-index: 1;
+            animation: bounce 2s infinite;
+        }
+
+        .arrow::after {
+            content: '';
+            position: absolute;
+            width: 3px;
+            height: 12px;
+            background: #fff;
+            left: 50%;
+            transform: translateX(-50%);
+            top: 10px;
+        }
+
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-8px);
+            }
+        }
+
+        .particle {
+            position: absolute;
+            width: 4px;
+            height: 4px;
+            background: rgba(255, 255, 255, 0.6);
+            border-radius: 50%;
+            pointer-events: none;
+            animation: particle-float 1s forwards;
+        }
+
+        @keyframes particle-float {
+            0% {
+                transform: translate(0, 0) scale(1);
+                opacity: 1;
+            }
+            100% {
+                transform: translate(var(--tx), var(--ty)) scale(0);
+                opacity: 0;
+            }
+        }
     </style>
     <nav>
      <img src="logo.png" alt="Logo" class="logo" loading="lazy">
@@ -986,7 +1096,7 @@ h2 {
    style="text-decoration: none; color: inherit;">
 
   <div class="plus"
-       style="min-width: 80vw;
+       style="min-width: 85vw;
               border-radius: 1em;
               padding: 1.6em;
               width: 320px;
@@ -1234,10 +1344,9 @@ window.addEventListener('load', () => {
   });
 
     </script>
- 
-        <button class="back-to-top" id="backToTop">
+   <button class="back-to-top" id="backToTop">
         <div class="arrow"></div>
-    </button>
+   </button>
 </body>
 
 </html>
