--- a/contact.html
+++ b/contact.html
@@ -750,7 +750,8 @@ nav .socials {
             <option value="Google">Google</option>
             <option value="Instagram">Instagram</option>
             <option value="Tiktok">Tiktok</option>
-            <option value="Newsletter">Newsletter</option>
+            <option value="Discord">Discord</option>
+            <option value="Email Outreach">Email Outreach</option>
             <option value="Friend">Friend</option>
             <option value="Other">Other</option>
         </select>
@@ -771,6 +772,10 @@ nav .socials {
         <div class="works">
             <input type="radio" id="graphic" name="work" value="Graphic Design">
             <label for="graphic">Graphic Design</label>
+        </div>
+                <div class="works">
+            <input type="radio" id="videoedit" name="work" value="Video Editing">
+            <label for="videoedit">Video Editing</label>
         </div>
         <div class="works">
             <input type="radio" id="others" name="work" value="Others">
